fix(#1592): Fix compiler warnings in core/citrus-base module
Eliminates all compiler warnings from the citrus-base module:

- Add @SuppressWarnings("unchecked") for CRTP self-type builder casts
- Replace deprecated APIs: shaHex->sha1Hex, isAccessible removal,
  XMLReaderFactory->SAXParserFactory, percentage method renames
- Suppress deprecation for commons-lang3 StringEscapeUtils (migration
  to commons-text is scope creep)
- Fix Javadoc: malformed HTML tags, broken {@link}/{@code} syntax
- Fix test warnings: boxed constructor removal, raw types, generics

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>